[gd_scene load_steps=4 format=2]

[ext_resource path="res://x2PowerUp.gd" type="Script" id=1]
[ext_resource path="res://FOTD Assets/PNG/Icons/double_point1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 26.3599

[node name="x2PowerUp" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.0979407, 0.0979407 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="Area2D" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
